# django_react_study

./: README.md  pyproject.toml
backend/: db.sqlite3
backend/crud/: settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Create.tsx  Delete.tsx  Edit.tsx  Home.tsx
frontend/src/components/navbar/: Menu.tsx  Navbar.tsx  menu.tsx  navbar.tsx
